ext/yuni/nany/tests/invalid/if_missing_expression.ny
# This test has a then clause with nothing in it

function main
{
	if true then  else 0
}
